# rbtv

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REORG-PLAN.md  TODO.md  bmad-compat.yaml  config.yaml  get_started.md  how-it-works.html  install-rbtv.py  install.py  rbtv-manifest.csv  readme.md  subagents-manifest.csv  tools-manifest.csv
.claude/: settings.local.json
.cursor/: mcp.json
.rbtv-docs/: domain_model_specification.md  handoff_planning_workflow_adjustments.md
_admin/: CLAUDE.md  README.md  install-admin-rbtv.py
_config/: bootstrap.py  config.yaml  install-rbtv.py  tools-manifest.csv
_mobile/: AGENTS.md  HOW-IT-WORKS.md  (+5 more)
core/tools/safe-move/: pyproject.toml
core/tools/safe-move/safe_move/: __init__.py  __main__.py  act.py  classify.py  cli.py  code_matcher.py  consult.py  hashing.py  matchers.py  move.py  replace.py  report.py  scope.py
core/tools/safe-move/tests/: __init__.py  conftest.py  harness.py  test_act.py  test_bare_filename.py  test_classify.py  test_cli.py  test_code_classification.py  test_code_matcher.py  test_code_references_tier1.py  test_concurrency_and_matcher_fixes.py  test_consult.py  test_consult_nested_repo.py  test_folder_matrix.py  test_folder_refs.py  test_gitignore_walk.py  test_hashing.py  test_matchers.py  test_move.py  test_move_folders.py  test_non_code_matrix.py  test_out_of_scope_folder.py  test_overlap_collapse.py  test_reorg_fixes.py  test_replace.py  test_report_cli.py  test_round_trip.py  test_scope.py  test_self_ref_literal.py  test_tier1_harness.py  test_utf8_and_perf.py
(+3582 files in other folders)
